--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'corretto'
+          java-version: '25'
+          distribution: 'oracle'
           cache: maven
       - name: Build urban-spork-jni
         run: mvn package -B -pl urban-spork-jni -am -DskipTests
@@ -37,8 +37,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'corretto'
+          java-version: '25'
+          distribution: 'oracle'
           cache: maven
       - name: Download urban-spork-jni artifact
         uses: actions/download-artifact@v4
