--- a/urban-spork-jni/pom.xml
+++ b/urban-spork-jni/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>urban-spork</groupId>
         <artifactId>urban-spork</artifactId>
-        <version>2.5.8</version>
+        <version>2.5.9</version>
     </parent>
     <artifactId>urban-spork-jni</artifactId>
     <dependencies>
